# aws-lambda-axum-dynamodb-template

./: README.md  api.yml  samconfig.toml  template.yaml
.github/workflows/: ci.yml
rust/: .env  Cargo.toml  Secrets.dev.toml
rust/.sqlx/: query-68be77f2b7674482950ca77035bbe69d7e366bbca20e3e28d4a6dcc756b6d48c.json  query-828d5ca3cfc3bd3453eee05cc7abe0e86ccd41069910496396bcb5d192fc262c.json
rust/migrations/: 20240713075739_create_table.sql
rust/src/: main-lambda.rs  main.rs  main2.rs
