[package]
name = "axum-rust"
version = "0.1.1"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.28.2", features = ["full", "macros", "rt-multi-thread"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["cors", "trace"] }
uuid = { version = "1.8.0", features = ["serde", "v4"] }
lambda-web = { version = "0.2.0", features=["hyper"] }
lambda_http = { git = "https://github.com/awslabs/aws-lambda-rust-runtime", branch = "main" }
axum = "0.7.5"
anyhow = "1.0.86"
async-injector = "0.19.3"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.34.0"
